k8s/labs/advanced/apps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: advanced-study
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: advanced-study
spec:
  replicas: 2
  selector:
    matchLabels:
      app: advanced-frontend
  template:
    metadata:
      labels:
        app: advanced-frontend
    spec:
      containers:
        - name: app
          image: fe-advanced:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet: {path: /startupz, port: 8080}
            periodSeconds: 2
            timeoutSeconds: 1
            failureThreshold: 30
          readinessProbe:
            httpGet: {path: /readyz, port: 8080}
            periodSeconds: 2
            timeoutSeconds: 1
            failureThreshold: 2
            successThreshold: 1
          livenessProbe:
            httpGet: {path: /livez, port: 8080}
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          resources:
            requests: {cpu: 50m, memory: 64Mi}
            limits: {cpu: 250m, memory: 128Mi}
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: advanced-study
spec:
  selector:
    app: advanced-frontend
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: advanced-study
spec:
  replicas: 2
  selector:
    matchLabels:
      app: advanced-api
  template:
    metadata:
      labels:
        app: advanced-api
    spec:
      containers:
        - name: app
          image: fe-advanced:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet: {path: /startupz, port: 8080}
            periodSeconds: 2
            timeoutSeconds: 1
            failureThreshold: 30
          readinessProbe:
            httpGet: {path: /readyz, port: 8080}
            periodSeconds: 2
            timeoutSeconds: 1
            failureThreshold: 2
            successThreshold: 1
          livenessProbe:
            httpGet: {path: /livez, port: 8080}
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          resources:
            requests: {cpu: 50m, memory: 64Mi}
            limits: {cpu: 250m, memory: 128Mi}
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: advanced-study
spec:
  selector:
    app: advanced-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
